--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,10 @@
       </div>
     </div>
 
+    <div class="social-links">
+      {%- include social.html -%}
+    </div>
+
   </div>
 
 </footer>
